--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,3 +19,8 @@ jobs:
       - run: flutter doctor
       - run: flutter pub get
       - run: flutter build web
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/web
