--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,7 +18,7 @@ jobs:
       - run: flutter --version
       - run: flutter doctor
       - run: flutter pub get
-      - run: flutter build web
+      - run: flutter build web --base-href "/flutter_application_odd_one_out/"
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
