ci: limit gh-pages deploy to main

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -21,6 +21,7 @@ jobs:
       - run: flutter build web --base-href "/flutter_application_odd_one_out/"
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
+        if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build/web
